Add fully connected architecture

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-# Scalogram and Labels
-dataset.wavelet.in.npy
-dataset.wavelet.out.npy
-dataset.conv1d.in.npy
-dataset.conv1d.out.npy
-dataset.lstm.in.npy
-dataset.lstm.out.npy
+# Saved Datasets
+dataset.*.in.npy
+dataset.*.out.npy
 
 # W&B
 wandb/
