Move dataset preprocessing to download_dataset()

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ data/raw/
 data/clean/
 data/magnet.zip
 data/magnet.tar.gz
+data/dataset.npy
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
